--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://cdn.tailwindcss.com https://esm.sh 'unsafe-eval' 'unsafe-inline'; object-src 'none'; base-uri 'self';">
     <title>StayOS PMS</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
